[tool.poetry]
name = "bootsteps"
version = "0.1.0"

license = "BSD-3-Clause"

authors = [
    "Omer Katz <omer.drow@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.5"
networkx = "=2.3"
trio = "=0.11"
attrs = "=19.1"
eliot = "=1.9"
dependencies = { git = "https://github.com/dry-python/dependencies.git", branch = "master" }
cached-property = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-trio = "*"
tox = "^3.12"
pycodestyle = "*"
isort = "*"
ipython = "^7.6"
asynctest = "^0.13.0"
pytest-mock = "^1.10"
pytest-cov = "^2.7"
hypothesis = "^4.28"
pytest-xdist = "^1.29"
multiprocessing_generator = "^0.2.0"
hypothesis-networkx = "^0.2.0"
pytest-ordering = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
